fix select input and recent posts alignment padding

--- a/style.css
+++ b/style.css
@@ -279,7 +279,6 @@ li.menu-item-has-children:hover > .sub-menu {
 .text-left-title-featured-sidebar {
 	font-size: 175% !important;
 	font-weight: 300;
-	padding:15px !important;
 	white-space: normal;
 	overflow:hidden;
 	text-overflow: ellipsis;
@@ -706,6 +705,21 @@ footer {
 		padding-bottom: 20px;
 	}
 
+	.text-left-title-featured-sidebar {
+		padding-top: 15px !important;
+		padding-bottom: 15px !important;
+		padding-left: 5px !important;
+		padding-right: 5px !important;
+	}
+
+	.widget_recent_entries > ul > li {
+   	 	padding-left: 5px !important;
+   	 	padding-right: 5px !important;
+	}
+
+	.select-wrapper {
+		margin-left: 0px !important;
+	}
 }
 
 /* mobile devices */
@@ -732,6 +746,14 @@ footer {
 		margin-top: -15px;
 	}
 
+	.text-left-title-featured-sidebar {
+		padding-top: 15px !important;
+		padding-bottom: 15px !important;
+		padding-left: 5px !important;
+		padding-right: 5px !important;
+	}
+
+
 	.comment-author > cite {
     	font-size: 1.7em !important;
 	}
@@ -749,6 +771,15 @@ footer {
 		padding-left: 5px;
 		padding-right: 5px;
 		padding-bottom: 20px;
+	}
+
+	.widget_recent_entries > ul > li {
+   	 	padding-left: 5px !important;
+   	 	padding-right: 5px !important;
+	}
+
+	.select-wrapper {
+		margin-left: 5px !important;
 	}
 
 }
@@ -771,6 +802,10 @@ footer {
 		margin-bottom: 20px;
 	}
 
+	.text-left-title-featured-sidebar {
+		padding: 15px !important;
+	}
+
 	.search-box {
 		padding: 15px;
 	}
@@ -787,6 +822,15 @@ footer {
 	.tagcloud {
 		padding-left: 20px;
 		padding-right: 20px;
+	}
+
+	.widget_recent_entries > ul > li {
+   	 	padding-left: 15px !important;
+   	 	padding-right: 15px !important;
+	}
+
+	.select-wrapper {
+		margin-left: 20px !important;
 	}
 }
 
@@ -1165,10 +1209,6 @@ div.aligncenter {
 /* sidebar dropdown element */
 .select-wrapper input.select-dropdown {
 	border-bottom: 0px !important;
-}
-
-.select-wrapper {
-	margin-left: 20px !important;
 }
 
 /* **************************************
